option java_package = "com.inmobi.oem.core.services.sdk.app.google.proto";

message RequestContext {
    repeated App app = 1;
}

message App {
    optional bytes authSubToken = 1; // authsub token for service 'android'
    optional bool isSecure = 2; // is this a secure request or not
    optional int32 version = 3; // always 1002
    optional string androidId = 4; // android id converted to hexadecimal
    optional string deviceAndSdkVersion = 5; // ro.product.device ':' ro.build.version.sdk
    optional string userLanguage = 6; // ro.product.locale.language
    optional string userCountry = 7; // ro.product.locale.region
    optional string operatorAlpha = 8; // gsm.operator.alpha
    optional string simOperatorAlpha = 9; // gsm.sim.operator.alpha
    optional string operatorNumeric = 10; // gsm.operator.numeric
    optional string simOperatorNumeric = 11; // sim.gsm.operator.numeric
}

message GetAssetResponse {
    repeated group InstallAsset = 1 {
        optional string assetId = 2;
        optional string assetName = 3;
        optional string assetType = 4;
        optional string assetPackage = 5;
        optional string blobUrl = 6;
        optional string assetSignature = 7;
        optional uint64 assetSize = 8;
        optional uint64 refundTimeout = 9;
        optional bool forwardLocked = 10;
        optional bool secured = 11;
        optional int32 versionCode = 12;
        optional string downloadAuthCookieName = 13;
        optional string downloadAuthCookieValue = 14;
    }
}